fix IE vertical scrollbar gap/horizontal scrollbar in chat windows (trello #695)
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@14933 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_chat.scss
+++ b/src/main/resources/scss/_chat.scss
@@ -142,6 +142,8 @@
 	}
 
 	.chat-log-view {
+		overflow-x: hidden;
+		overflow-y: auto;
 		border-radius: 0 5px 0 0;
 		border-bottom: 1px solid #cfcfcf !important;
 		box-shadow: inset  0px -7px 7px -7px #f7f7f7;
